Fix a bug on mobile where the rules were off center

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     margin-left: auto;
     margin-right: auto;
     width: auto;
+    max-width: 100%;
 }
 
 .black {
